third_party/move/tools/move-asm/tests/undef_local.exp
--- Aborting with assembler errors:
error: unknown local `z`
  ┌─ tests/undef_local.masm:5:5
  │
5 │     copy_loc z
  │     ^^^^^^^^^^
